adjust navbar size styling. add whitespace/overflow settings to buttons to prevent size change. add login btn base styling

--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -10,9 +10,10 @@
 .navbar-logo {
   color: #fff;
   justify-self: start;
-  cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
+  white-space: nowrap;
+  cursor: pointer;
 }
 
 .nav-menu {
@@ -67,7 +68,7 @@
     width: 100%;
     height: 40vh;
     position: absolute;
-    top: 80px;
+    top: 100px;
     left: -100%;
     opacity: 0.9;
     transition: all 0.5s ease;
@@ -123,7 +124,7 @@
     padding: 1.5rem;
     margin: 2rem auto;
     border-radius: 4px;
-    width: 80%;
+    width: 40%;
     background: #1888ff;
     text-decoration: none;
     color: #fff;
@@ -139,6 +140,10 @@
   .sign-up-btn {
     display: none;
   }
+
+  .login-btn {
+    display: none;
+  }
 }
 
 .sign-up-btn {
@@ -147,12 +152,36 @@
   border-radius: 4px;
   border: none;
   outline: none;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-right: 10px;
   font-size: 18px;
   color: #fff;
   cursor: pointer;
 }
 
 .sign-up-btn:hover {
+  padding: 6px 18px;
+  border-radius: 4px;
+  border: 2px solid #1880ee;
+  color: #1888ff;
+  background: #fff;
+}
+
+.login-btn {
+  background-color: #1880ee;
+  padding: 8px 20px;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.login-btn:hover {
   padding: 6px 18px;
   border-radius: 4px;
   border: 2px solid #1880ee;
